tests/paczka1/fuzzy1/64820522.err
Error in line 9: S166 S748 96,9
Error in line 1: 8hEJAAsrL55 S166 96,2
Error in line 15: vdw72v S166 62,0
Error in line 22: fva1m5F8a S83 72,5
Error in line 26: S166 S83 79,2
